--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "node-ical": "^0.17.2",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
     "url": "^0.11.3"
   }
